--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.2.3
+Flask==2.0.1
+Werkzeug==2.0.3
 numpy==1.24.2
 pandas==2.0.0
 scikit-learn==1.2.2
@@ -13,3 +14,4 @@ google-search-results==2.4.2
 beautifulsoup4==4.12.0
 python-whois==0.8.0
 ipaddress==1.0.23
+
