--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Flask==2.0.1
-Werkzeug==2.0.3
-numpy==1.24.2
-pandas==2.0.0
-scikit-learn==1.2.2
-beautifulsoup4==4.12.0
-requests==2.28.2
-whois==0.9.27
-python-dateutil==2.8.2
-urllib3==1.26.15
-google-search==1.1.1
-googlesearch-python==1.2.3
-google-search-results==2.4.2
-beautifulsoup4==4.12.0
-python-whois==0.8.0
-ipaddress==1.0.23
+Flask
+Werkzeug
+numpy
+pandas
+scikit-learn
+beautifulsoup4
+requests
+whois
+python-dateutil
+urllib3
+google-search
+googlesearch-python
+google-search-results
+beautifulsoup4
+python-whois
+ipaddress
 
