--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
-Flask
-Werkzeug
-numpy
-pandas
-scikit-learn
-beautifulsoup4
-requests
-whois
-python-dateutil
-urllib3
-google-search
-googlesearch-python
-google-search-results
-beautifulsoup4
-python-whois
-ipaddress
+beautifulsoup4==4.9.3
+numpy==1.19.5
+pandas==1.1.5
+scikit_learn==1.1.3
+googlesearch_python==1.0.1
+whois==0.9.13
+gunicorn==20.1.0
+requests==2.25.1
+werkzeug==2.2.2
+Flask==2.0.0
 
+python 3.8
