--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-beautifulsoup4==4.9.3
-numpy==1.19.5
-pandas==1.1.5
-scikit_learn==1.1.3
-googlesearch_python==1.0.1
-whois==0.9.13
-gunicorn==20.1.0
-requests==2.25.1
-werkzeug==2.2.2
-Flask==2.0.0
+Flask==2.0.1
+Werkzeug==2.0.3
+numpy==1.24.2
+pandas==2.0.0
+scikit-learn==1.2.2
+beautifulsoup4==4.12.0
+requests==2.28.2
+whois==0.9.27
+python-dateutil==2.8.2
+urllib3==1.26.15
+google-search==1.1.1
+googlesearch-python==1.2.3
+google-search-results==2.4.2
+beautifulsoup4==4.12.0
+python-whois==0.8.0
+ipaddress==1.0.23
